Add quantitative value to condition results.

--- a/deps/cdx_core/lib/config/fields.yml
+++ b/deps/cdx_core/lib/config/fields.yml
@@ -61,6 +61,7 @@ entities:
               - positive
               - negative
               - indeterminate
+              - quantitative
               - n/a
           quantitative_result:
             searchable: true
