Add/amend patient.

--- a/deps/cdx_core/lib/config/fields.yml
+++ b/deps/cdx_core/lib/config/fields.yml
@@ -99,7 +99,7 @@ entities:
         pii: true
       name:
         pii: true
-      dob:
+      birth_date_on:
         type: date
         pii: true
       gender:
