Ensure address changes are logged.

--- a/deps/cdx_core/lib/config/fields.yml
+++ b/deps/cdx_core/lib/config/fields.yml
@@ -99,6 +99,9 @@ entities:
         pii: true
       name:
         pii: true
+      dob:
+        type: date
+        pii: true
       birth_date_on:
         type: date
       gender:
