--- a/deps/cdx_core/lib/config/fields.yml
+++ b/deps/cdx_core/lib/config/fields.yml
@@ -144,6 +144,8 @@ entities:
         searchable: true
       observations:
         pii: true
+      testing_for:
+        searchable: true
       diagnosis:
         type: nested
         sub_fields:
