Add institution/read as default for new users.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ cookbooks
 Cheffile.lock
 .vagrant
 .rbenv-vars
-.rbenv-vars
+.ruby-version
+.byebug_history
 public/javascripts/translations.js
 public/javascripts/i18n.js
