--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -13,3 +13,13 @@ gemspec
 # To use a debugger
 # gem 'byebug', group: [:development, :test]
 
+gem 'responders', '~> 2.0'
+gem 'mysql2'
+
+group :development, :test do
+  gem 'faker'
+end
+
+group :test do
+  gem 'machinist', '~> 1.0'
+end
