--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -26,11 +26,14 @@ gem 'barby'
 gem 'chunky_png'
 gem 'cdx', path: '../'
 gem 'cdx-api-elasticsearch', path: '../'
+gem 'cdx-sync-server', git: 'https://github.com/instedd/cdx-sync-server.git', branch: 'master'
 gem 'geojson_import', git: 'https://github.com/instedd/geojson_import', branch: 'master'
 gem 'location_service', git: 'https://github.com/instedd/ruby-location_service.git', branch: 'master'
 gem 'guid'
 gem 'oj'
 gem 'encryptor'
+gem 'base58'
+gem 'nuntium_api', '~> 0.21'
 
 group :development do
   gem 'letter_opener'
