--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ bin/rspec
 bin/rake
 config/settings.local.yml
 config/settings/*.local.yml
+cdx_core/config/settings.local.yml
+cdx_core/config/settings/*.local.yml
 public/system
 examples.txt
 Procfile.local
