--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -43,6 +43,7 @@ gem 'config'
 gem 'decent_exposure', '2.3.2'
 gem 'gon'
 gem 'rubyzip', '>= 1.0.0'
+gem 'jbuilder', '~> 1.2'
 
 group :development do
   gem 'letter_opener'
