--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -47,6 +47,7 @@ gem 'jbuilder', '~> 1.2'
 gem 'bettertabs'
 gem 'csv_builder'
 gem 'coffee-rails', '4.0.1'
+gem 'kaminari'
 
 group :development do
   gem 'letter_opener'
