--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -15,6 +15,7 @@ gemspec
 
 gem 'responders', '~> 2.0'
 gem 'mysql2'
+gem 'sass-rails', '~> 4.0.0'
 gem 'jquery-rails'
 gem 'haml-rails'
 gem 'react-rails', '~> 1.3.2'
@@ -48,6 +49,8 @@ gem 'bettertabs'
 gem 'csv_builder'
 gem 'coffee-rails', '4.0.1'
 gem 'kaminari'
+gem 'therubyracer'
+gem 'dotiw'
 
 group :development do
   gem 'letter_opener'
