Add country select droplist to addresses. Add VN customisation. Hide Zip Code for VN

--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -48,6 +48,7 @@ gem 'csv_builder'
 gem 'coffee-rails', '4.0.1'
 gem 'kaminari'
 gem 'therubyracer'
+gem 'country_select'
 gem 'dotiw'
 gem 'rchardet'
 gem 'sidekiq', '3.5.0'
