--- a/cdx_vietnam/Gemfile
+++ b/cdx_vietnam/Gemfile
@@ -48,6 +48,7 @@ gem 'csv_builder'
 gem 'coffee-rails', '4.0.1'
 gem 'kaminari'
 gem 'therubyracer'
+gem 'country_select'
 gem 'dotiw'
 gem 'rchardet'
 gem 'sidekiq', '3.5.0'
@@ -92,4 +93,5 @@ group :test do
   gem 'capybara-screenshot'
   gem 'webmock', '1.21.0', require: false
   gem 'site_prism'
+  gem 'activesupport-decorators', '~> 2.1'
 end
