Add decorators to be able to run tests in vietnam engine.

--- a/cdx_vietnam/Gemfile
+++ b/cdx_vietnam/Gemfile
@@ -81,6 +81,7 @@ group :development, :test do
 end
 
 group :test do
+  gem 'activesupport-decorators', '~> 2.1'
   gem 'machinist', '~> 1.0'
   gem 'capybara'
   gem 'database_cleaner'
