--- a/cdx_api_core/Gemfile
+++ b/cdx_api_core/Gemfile
@@ -47,6 +47,8 @@ gem 'sidekiq', '3.5.0'
 gem 'sinatra'
 gem 'sidekiq-cron', '~> 0.3.1'
 gem 'doorkeeper'
+gem 'grape'
+gem 'grape-swagger'
 
 group :development do
   gem 'spring'
