--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
 
 test: &test
   <<: *default
-  database: cdp_test
+  database: cdp_test<%= branch_spec %>
 
 production:
   <<: *default
