--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ config/settings.local.yml
 config/settings/*.local.yml
 */config/settings.local.yml
 */config/settings/*.local.yml
+*/spec/dummy/config/*.local.yml
 public/system
 examples.txt
 Procfile.local
