--- a/cdx_api_vietnam/Gemfile
+++ b/cdx_api_vietnam/Gemfile
@@ -43,9 +43,9 @@ gem 'kaminari'
 gem 'therubyracer'
 gem 'dotiw'
 gem 'rchardet'
-gem 'sidekiq', '3.5.0'
+gem 'sidekiq'
 gem 'sinatra'
-gem 'sidekiq-cron', '~> 0.3.1'
+gem 'sidekiq-cron'
 gem 'doorkeeper'
 
 group :development do
