--- a/cdx_vietnam/Gemfile
+++ b/cdx_vietnam/Gemfile
@@ -51,9 +51,9 @@ gem 'therubyracer'
 gem 'country_select'
 gem 'dotiw'
 gem 'rchardet'
-gem 'sidekiq', '3.5.0'
+gem 'sidekiq'
 gem 'sinatra'
-gem 'sidekiq-cron', '~> 0.3.1'
+gem 'sidekiq-cron'
 gem 'cdx_core', path: '../'
 gem 'activesupport-decorators', '~> 2.1'
 
