--- a/config/sidekiq_schedule.yml
+++ b/config/sidekiq_schedule.yml
@@ -11,3 +11,10 @@ schedule_hourly_aggregation_job:
   queue: default
   active_job: false
   retry: 0
+
+schedule_instant_aggregation_job:
+  cron: "0 * * * * *"
+  class: "InstantAggregationJob"
+  queue: default
+  active_job: false
+  retry: 0
