--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -58,6 +58,9 @@ gem 'sidekiq-cron'
 # SMS library
 gem 'twilio-ruby', '~> 4.11.1'
 
+# Keep track of changes when multiple saves happen within a transaction
+gem 'ar_transaction_changes'
+
 group :development do
   gem 'letter_opener'
   gem 'letter_opener_web'
