--- a/db/seeds/manifests/genexpert_manifest.json
+++ b/db/seeds/manifests/genexpert_manifest.json
@@ -1,6 +1,6 @@
 {
   "metadata": {
-    "version": "1.1.3",
+    "version": "1.1.4",
     "api_version": "1.5.0",
     "conditions": [
       "mtb"
@@ -20,8 +20,8 @@
     "sample.id"                      : { "lookup" : "event.sample_ID" },
     "sample.xpert_notes"             : { "lookup" : "event.notes" },
     "test.site_user"                 : { "lookup" : "event.system_user" },
-    "test.start_time"                : { "lookup" : "event.start_time" },
-    "test.end_time"                  : { "lookup" : "event.end_time" },
+    "test.start_time" : {"parse_date": [{ "lookup": "event.start_time" }, "%FT%T%:z"]},
+    "test.end_time"   : {"parse_date": [{ "lookup": "event.end_time" }, "%FT%T%:z"]},
     "test.id"                        : { "lookup" : "event.event_id" },
     "test.error_code"                : { "lookup" : "event.error_code" },
     "test.error_description"         : { "lookup" : "event.error_description" },
