--- a/db/seeds/manifests/genexpert_manifest.json
+++ b/db/seeds/manifests/genexpert_manifest.json
@@ -1,6 +1,6 @@
 {
   "metadata": {
-    "version": "1.1.4",
+    "version": "1.1.5",
     "api_version": "1.5.0",
     "conditions": [
       "mtb"
@@ -21,7 +21,13 @@
     "sample.xpert_notes"             : { "lookup" : "event.notes" },
     "test.site_user"                 : { "lookup" : "event.system_user" },
     "test.start_time" : {"parse_date": [{ "lookup": "event.start_time" }, "%FT%T%:z"]},
-    "test.end_time"   : {"parse_date": [{ "lookup": "event.end_time" }, "%FT%T%:z"]},
+    "test.end_time"   : {
+      "if" : [
+        { "equals" : [ { "lookup": "event.end_time" }, "" ] }, // Condition
+        null, // Then this
+        { "parse_date": [{ "lookup": "event.end_time" }, "%FT%T%:z"] } // Or this
+      ]
+    },
     "test.id"                        : { "lookup" : "event.event_id" },
     "test.error_code"                : { "lookup" : "event.error_code" },
     "test.error_description"         : { "lookup" : "event.error_description" },
