--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -97,4 +97,5 @@ group :test do
   gem 'webmock', '1.21.0', require: false
   gem 'site_prism'
   gem 'test_after_commit'
+  gem 'simplecov', :require => false
 end
