--- a/cdx_vietnam/Gemfile
+++ b/cdx_vietnam/Gemfile
@@ -56,6 +56,7 @@ gem 'sidekiq-cron'
 gem 'cdx_core', path: '../'
 gem 'activesupport-decorators', '~> 2.1'
 gem 'ar_transaction_changes'
+gem 'acts_as_tree', '~> 2.6'
 
 group :development do
   gem 'letter_opener'
