--- a/cdx_core/Gemfile
+++ b/cdx_core/Gemfile
@@ -75,7 +75,7 @@ group :development do
 end
 
 group :development, :test do
-  gem 'faker'
+  gem 'faker', '~> 1.6.6'
   gem 'pry-byebug'
   gem 'pry-rescue'
   gem 'pry-stack_explorer'
